# DrawCircuit

./: .gitignore  README.md  ROADMAP.md
backend/: .gitignore  check_models.py  database.py  main-snippet.py  main.py  populate_ai_modules.py  populate_all_courses.py  populate_python_course.py  pyproject.toml  railway.json  requirements.txt  reset_components.py
frontend/: index.html  package-lock.json  package.json  railway.json  vite.config.js
frontend/src/: AdminDashboard.jsx  App.jsx  CircuitMaker.jsx  Events.jsx  Home.jsx  StudyGuide.jsx  TrainingGallery.jsx  UpdateSuccess.jsx  index.css  main.jsx
frontend/src/components/: ConfirmDialog.jsx  Footer.jsx  Navbar.jsx
frontend/src/data/: trainingImages.js
